--- a/html/date/2024-08/page-6.htm
+++ b/html/date/2024-08/page-6.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-8011.htm" title="普通宠物店一年收入（开宠物店利润大吗）">普通宠物店一年收入（开宠物店利润大吗）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8943.htm" title="高质量建设、高水平管理（学会了吗）高质量建设制造强省的意见，双城生活电视剧，邱非，">高质量建设、高水平管理（学会了吗）高质量建设制造强省的意见，双城生活电视剧，邱非，</a></li>
-                        <li class="py-2"><a href="/html/category/article-8346.htm" title="宠物粮供应商有哪些 宠物粮供应商有哪些公司">宠物粮供应商有哪些 宠物粮供应商有哪些公司</a></li>
-                        <li class="py-2"><a href="/html/category/article-7903.htm" title="芭比堂宠物医院白广路电话（芭比堂宠物医院玉泉路店电话）">芭比堂宠物医院白广路电话（芭比堂宠物医院玉泉路店电话）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7630.htm" title="国内十大宠物粮食品牌排行榜图片（国内宠物粮食十大厂家）">国内十大宠物粮食品牌排行榜图片（国内宠物粮食十大厂家）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8345.htm" title="济南宠物狗免费赠送活动（济南宠物狗免费赠送活动是真的吗）">济南宠物狗免费赠送活动（济南宠物狗免费赠送活动是真的吗）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8178.htm" title="宠物医师证可以自考自学吗（想考宠物执业医师资格证）">宠物医师证可以自考自学吗（想考宠物执业医师资格证）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8067.htm" title="宠物免费咨询24小时在线医生仓鼠（仓鼠免费问诊）">宠物免费咨询24小时在线医生仓鼠（仓鼠免费问诊）</a></li>
                         <li class="py-2"><a href="/html/category/article-8675.htm" title="秋蝉中池城是好人么（干货分享）秋蝉池诚的扮演者是谁，别问我是谁电视剧，池诚，">秋蝉中池城是好人么（干货分享）秋蝉池诚的扮演者是谁，别问我是谁电视剧，池诚，</a></li>
-                        <li class="py-2"><a href="/html/category/article-8731.htm" title="三国杀全武将语音台词（三国杀全武将语音台词大全）">三国杀全武将语音台词（三国杀全武将语音台词大全）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8786.htm" title="动物医学职业资格证书（动物医学医师证）">动物医学职业资格证书（动物医学医师证）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8892.htm" title="被猫爪子勾了一下出了一点血需要打几针（被猫爪子勾了一下出了一点血需要打破伤风吗）">被猫爪子勾了一下出了一点血需要打几针（被猫爪子勾了一下出了一点血需要打破伤风吗）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7958.htm" title="郑州宠物疫苗绝育（郑州宠物疫苗绝育多少钱）">郑州宠物疫苗绝育（郑州宠物疫苗绝育多少钱）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7793.htm" title="义乌花鸟市场搬哪里去了（义乌农贸城花鸟市场）">义乌花鸟市场搬哪里去了（义乌农贸城花鸟市场）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7903.htm" title="芭比堂宠物医院白广路电话（芭比堂宠物医院玉泉路店电话）">芭比堂宠物医院白广路电话（芭比堂宠物医院玉泉路店电话）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8507.htm" title="动物诊疗许可证需要什么材料和手续（动物诊疗许可证需要什么材料和手续办理）">动物诊疗许可证需要什么材料和手续（动物诊疗许可证需要什么材料和手续办理）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8121.htm" title="宠物公众领养所（宠物领养中心领养条件是什么）">宠物公众领养所（宠物领养中心领养条件是什么）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8011.htm" title="普通宠物店一年收入（开宠物店利润大吗）">普通宠物店一年收入（开宠物店利润大吗）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8508.htm" title="领养宠物的网站（领养宠物去什么平台比较好）">领养宠物的网站（领养宠物去什么平台比较好）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">2</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">24</span></li>
