--- a/html/date/2024-09/page-4.htm
+++ b/html/date/2024-09/page-4.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
+                        <li class="py-2"><a href="/html/category/article-7683.htm" title="国内宠物品牌现状（国内宠物品牌现状如何）">国内宠物品牌现状（国内宠物品牌现状如何）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7849.htm" title="动物免疫接种实验原理视频（动物免疫接种技术）">动物免疫接种实验原理视频（动物免疫接种技术）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8840.htm" title="动物疫苗去哪买的 动物疫苗去哪买的到">动物疫苗去哪买的 动物疫苗去哪买的到</a></li>
+                        <li class="py-2"><a href="/html/category/article-7904.htm" title="移动的宽带好还是电信的宽带好?(移动的宽带便宜还是电信的宽带便宜)">移动的宽带好还是电信的宽带好?(移动的宽带便宜还是电信的宽带便宜)</a></li>
+                        <li class="py-2"><a href="/html/category/article-8508.htm" title="领养宠物的网站（领养宠物去什么平台比较好）">领养宠物的网站（领养宠物去什么平台比较好）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8345.htm" title="济南宠物狗免费赠送活动（济南宠物狗免费赠送活动是真的吗）">济南宠物狗免费赠送活动（济南宠物狗免费赠送活动是真的吗）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8346.htm" title="宠物粮供应商有哪些 宠物粮供应商有哪些公司">宠物粮供应商有哪些 宠物粮供应商有哪些公司</a></li>
+                        <li class="py-2"><a href="/html/category/article-8943.htm" title="高质量建设、高水平管理（学会了吗）高质量建设制造强省的意见，双城生活电视剧，邱非，">高质量建设、高水平管理（学会了吗）高质量建设制造强省的意见，双城生活电视剧，邱非，</a></li>
                         <li class="py-2"><a href="/html/category/article-8122.htm" title="妙三多猫三联是什么疫苗（妙三多猫三联一共几针,多少钱）">妙三多猫三联是什么疫苗（妙三多猫三联一共几针,多少钱）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8786.htm" title="动物医学职业资格证书（动物医学医师证）">动物医学职业资格证书（动物医学医师证）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8675.htm" title="秋蝉中池城是好人么（干货分享）秋蝉池诚的扮演者是谁，别问我是谁电视剧，池诚，">秋蝉中池城是好人么（干货分享）秋蝉池诚的扮演者是谁，别问我是谁电视剧，池诚，</a></li>
-                        <li class="py-2"><a href="/html/category/article-8402.htm" title="防霾纱窗品牌 什么纱窗防尘效果好些(防霾纱窗品牌 什么纱窗防尘效果好呢)">防霾纱窗品牌 什么纱窗防尘效果好些(防霾纱窗品牌 什么纱窗防尘效果好呢)</a></li>
-                        <li class="py-2"><a href="/html/category/article-7463.htm" title="纯生啤酒的功效与作用(纯生啤酒怎么样?)">纯生啤酒的功效与作用(纯生啤酒怎么样?)</a></li>
-                        <li class="py-2"><a href="/html/category/article-8731.htm" title="三国杀全武将语音台词（三国杀全武将语音台词大全）">三国杀全武将语音台词（三国杀全武将语音台词大全）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8289.htm" title="宠物品牌加盟（宠物加盟店排行榜加盟10大品牌）">宠物品牌加盟（宠物加盟店排行榜加盟10大品牌）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7464.htm" title="宠物领养平台app推荐下载苹果版（宠物领养平台app推荐下载苹果版）">宠物领养平台app推荐下载苹果版（宠物领养平台app推荐下载苹果版）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7850.htm" title="猫疫苗打几针（猫疫苗打几针有抗体）">猫疫苗打几针（猫疫苗打几针有抗体）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7630.htm" title="国内十大宠物粮食品牌排行榜图片（国内宠物粮食十大厂家）">国内十大宠物粮食品牌排行榜图片（国内宠物粮食十大厂家）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8178.htm" title="宠物医师证可以自考自学吗（想考宠物执业医师资格证）">宠物医师证可以自考自学吗（想考宠物执业医师资格证）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">2</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">24</span></li>
