--- a/html/date/2024-07/page-2.htm
+++ b/html/date/2024-07/page-2.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-8178.htm" title="宠物医师证可以自考自学吗（想考宠物执业医师资格证）">宠物医师证可以自考自学吗（想考宠物执业医师资格证）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7793.htm" title="义乌花鸟市场搬哪里去了（义乌农贸城花鸟市场）">义乌花鸟市场搬哪里去了（义乌农贸城花鸟市场）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8345.htm" title="济南宠物狗免费赠送活动（济南宠物狗免费赠送活动是真的吗）">济南宠物狗免费赠送活动（济南宠物狗免费赠送活动是真的吗）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8508.htm" title="领养宠物的网站（领养宠物去什么平台比较好）">领养宠物的网站（领养宠物去什么平台比较好）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7903.htm" title="芭比堂宠物医院白广路电话（芭比堂宠物医院玉泉路店电话）">芭比堂宠物医院白广路电话（芭比堂宠物医院玉泉路店电话）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8618.htm" title="有名的毒猫粮（公认的毒猫粮）">有名的毒猫粮（公认的毒猫粮）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8401.htm" title="猫的宠物疫苗多少钱一针（宠物猫疫苗大概多少钱）">猫的宠物疫苗多少钱一针（宠物猫疫苗大概多少钱）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7957.htm" title="如东附近宠物收容中心的简单介绍">如东附近宠物收容中心的简单介绍</a></li>
+                        <li class="py-2"><a href="/html/category/article-7683.htm" title="国内宠物品牌现状（国内宠物品牌现状如何）">国内宠物品牌现状（国内宠物品牌现状如何）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7849.htm" title="动物免疫接种实验原理视频（动物免疫接种技术）">动物免疫接种实验原理视频（动物免疫接种技术）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8231.htm" title="猫咪驱虫一般多少钱一次啊（猫驱虫一次要多少钱）">猫咪驱虫一般多少钱一次啊（猫驱虫一次要多少钱）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8068.htm" title="济南哪里能领养宠物（济南哪里可以领养宠物）">济南哪里能领养宠物（济南哪里可以领养宠物）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8564.htm" title="椰子肉怎么吃啊(椰子肉怎么吃法最好)">椰子肉怎么吃啊(椰子肉怎么吃法最好)</a></li>
                         <li class="py-2"><a href="/html/category/article-8011.htm" title="普通宠物店一年收入（开宠物店利润大吗）">普通宠物店一年收入（开宠物店利润大吗）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8785.htm" title="哈尔滨农大动物医院地址在哪儿（哈尔滨农大宠物医院的地址和电话）">哈尔滨农大动物医院地址在哪儿（哈尔滨农大宠物医院的地址和电话）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7684.htm" title="包含宠物领养有什么平台的词条">包含宠物领养有什么平台的词条</a></li>
+                        <li class="py-2"><a href="/html/category/article-8232.htm" title="动物疫苗可以快递吗安全吗知乎（动物疫苗可以去畜牧局批发吗）">动物疫苗可以快递吗安全吗知乎（动物疫苗可以去畜牧局批发吗）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8507.htm" title="动物诊疗许可证需要什么材料和手续（动物诊疗许可证需要什么材料和手续办理）">动物诊疗许可证需要什么材料和手续（动物诊疗许可证需要什么材料和手续办理）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8067.htm" title="宠物免费咨询24小时在线医生仓鼠（仓鼠免费问诊）">宠物免费咨询24小时在线医生仓鼠（仓鼠免费问诊）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">2</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">24</span></li>
