--- a/html/date/2024-09/page-3.htm
+++ b/html/date/2024-09/page-3.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-8401.htm" title="猫的宠物疫苗多少钱一针（宠物猫疫苗大概多少钱）">猫的宠物疫苗多少钱一针（宠物猫疫苗大概多少钱）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8456.htm" title="宠物饲料加工企业 宠物饲料加工企业排名">宠物饲料加工企业 宠物饲料加工企业排名</a></li>
-                        <li class="py-2"><a href="/html/category/article-8232.htm" title="动物疫苗可以快递吗安全吗知乎（动物疫苗可以去畜牧局批发吗）">动物疫苗可以快递吗安全吗知乎（动物疫苗可以去畜牧局批发吗）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8289.htm" title="宠物品牌加盟（宠物加盟店排行榜加盟10大品牌）">宠物品牌加盟（宠物加盟店排行榜加盟10大品牌）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7630.htm" title="国内十大宠物粮食品牌排行榜图片（国内宠物粮食十大厂家）">国内十大宠物粮食品牌排行榜图片（国内宠物粮食十大厂家）</a></li>
                         <li class="py-2"><a href="/html/category/article-8346.htm" title="宠物粮供应商有哪些 宠物粮供应商有哪些公司">宠物粮供应商有哪些 宠物粮供应商有哪些公司</a></li>
-                        <li class="py-2"><a href="/html/category/article-8177.htm" title="三亚都有哪些好酒店值得推荐入住的地方(三亚都有哪些好酒店值得推荐入住的酒店)">三亚都有哪些好酒店值得推荐入住的地方(三亚都有哪些好酒店值得推荐入住的酒店)</a></li>
-                        <li class="py-2"><a href="/html/category/article-8011.htm" title="普通宠物店一年收入（开宠物店利润大吗）">普通宠物店一年收入（开宠物店利润大吗）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8943.htm" title="高质量建设、高水平管理（学会了吗）高质量建设制造强省的意见，双城生活电视剧，邱非，">高质量建设、高水平管理（学会了吗）高质量建设制造强省的意见，双城生活电视剧，邱非，</a></li>
-                        <li class="py-2"><a href="/html/category/article-7737.htm" title="领养狗狗的要求（领养狗狗的要求是什么）">领养狗狗的要求（领养狗狗的要求是什么）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7684.htm" title="包含宠物领养有什么平台的词条">包含宠物领养有什么平台的词条</a></li>
+                        <li class="py-2"><a href="/html/category/article-7683.htm" title="国内宠物品牌现状（国内宠物品牌现状如何）">国内宠物品牌现状（国内宠物品牌现状如何）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7957.htm" title="如东附近宠物收容中心的简单介绍">如东附近宠物收容中心的简单介绍</a></li>
+                        <li class="py-2"><a href="/html/category/article-8564.htm" title="椰子肉怎么吃啊(椰子肉怎么吃法最好)">椰子肉怎么吃啊(椰子肉怎么吃法最好)</a></li>
+                        <li class="py-2"><a href="/html/category/article-8121.htm" title="宠物公众领养所（宠物领养中心领养条件是什么）">宠物公众领养所（宠物领养中心领养条件是什么）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8891.htm" title="动物医院需要几个执业兽医证件 动物医院需要几个执业兽医证件才能开">动物医院需要几个执业兽医证件 动物医院需要几个执业兽医证件才能开</a></li>
+                        <li class="py-2"><a href="/html/category/article-8289.htm" title="宠物品牌加盟（宠物加盟店排行榜加盟10大品牌）">宠物品牌加盟（宠物加盟店排行榜加盟10大品牌）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8786.htm" title="动物医学职业资格证书（动物医学医师证）">动物医学职业资格证书（动物医学医师证）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8231.htm" title="猫咪驱虫一般多少钱一次啊（猫驱虫一次要多少钱）">猫咪驱虫一般多少钱一次啊（猫驱虫一次要多少钱）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">2</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">24</span></li>
