--- a/html/date/2024-09/page-6.htm
+++ b/html/date/2024-09/page-6.htm
@@ -194,16 +194,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-8618.htm" title="有名的毒猫粮（公认的毒猫粮）">有名的毒猫粮（公认的毒猫粮）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8121.htm" title="宠物公众领养所（宠物领养中心领养条件是什么）">宠物公众领养所（宠物领养中心领养条件是什么）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8563.htm" title="宠物美容师多少钱一个月（宠物美容师多少钱一个月上海）">宠物美容师多少钱一个月（宠物美容师多少钱一个月上海）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8617.htm" title="猫三联每一针的作用（猫三联一针多少钱）">猫三联每一针的作用（猫三联一针多少钱）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8346.htm" title="宠物粮供应商有哪些 宠物粮供应商有哪些公司">宠物粮供应商有哪些 宠物粮供应商有哪些公司</a></li>
+                        <li class="py-2"><a href="/html/category/article-8731.htm" title="三国杀全武将语音台词（三国杀全武将语音台词大全）">三国杀全武将语音台词（三国杀全武将语音台词大全）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8289.htm" title="宠物品牌加盟（宠物加盟店排行榜加盟10大品牌）">宠物品牌加盟（宠物加盟店排行榜加盟10大品牌）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8178.htm" title="宠物医师证可以自考自学吗（想考宠物执业医师资格证）">宠物医师证可以自考自学吗（想考宠物执业医师资格证）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7958.htm" title="郑州宠物疫苗绝育（郑州宠物疫苗绝育多少钱）">郑州宠物疫苗绝育（郑州宠物疫苗绝育多少钱）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8999.htm" title="mackjhosel是什么牌子的包包(mackjhosel是什么牌子怎么读)">mackjhosel是什么牌子的包包(mackjhosel是什么牌子怎么读)</a></li>
                         <li class="py-2"><a href="/html/category/article-8891.htm" title="动物医院需要几个执业兽医证件 动物医院需要几个执业兽医证件才能开">动物医院需要几个执业兽医证件 动物医院需要几个执业兽医证件才能开</a></li>
-                        <li class="py-2"><a href="/html/category/article-8231.htm" title="猫咪驱虫一般多少钱一次啊（猫驱虫一次要多少钱）">猫咪驱虫一般多少钱一次啊（猫驱虫一次要多少钱）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8564.htm" title="椰子肉怎么吃啊(椰子肉怎么吃法最好)">椰子肉怎么吃啊(椰子肉怎么吃法最好)</a></li>
-                        <li class="py-2"><a href="/html/category/article-7794.htm" title="什么大米最好吃最香排行榜(东北什么大米最好吃最香)">什么大米最好吃最香排行榜(东北什么大米最好吃最香)</a></li>
-                        <li class="py-2"><a href="/html/category/article-7684.htm" title="包含宠物领养有什么平台的词条">包含宠物领养有什么平台的词条</a></li>
-                        <li class="py-2"><a href="/html/category/article-8011.htm" title="普通宠物店一年收入（开宠物店利润大吗）">普通宠物店一年收入（开宠物店利润大吗）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8944.htm" title="动物疫苗周期多长时间 动物疫苗周期多长时间打一次">动物疫苗周期多长时间 动物疫苗周期多长时间打一次</a></li>
+                        <li class="py-2"><a href="/html/category/article-8785.htm" title="哈尔滨农大动物医院地址在哪儿（哈尔滨农大宠物医院的地址和电话）">哈尔滨农大动物医院地址在哪儿（哈尔滨农大宠物医院的地址和电话）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8676.htm" title="动物疫苗厂家排名榜最新图片大全（动物疫苗厂家排名榜最新图片大全视频）">动物疫苗厂家排名榜最新图片大全（动物疫苗厂家排名榜最新图片大全视频）</a></li>
                     </ul>
     </div>
 </div>
@@ -214,7 +214,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">2</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">24</span></li>
