--- a/html/date/2024-09/page-6.htm
+++ b/html/date/2024-09/page-6.htm
@@ -194,16 +194,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-10051.htm" title="红烧牛肉怎么烧嫩好吃(红烧牛肉怎样做才嫩)">红烧牛肉怎么烧嫩好吃(红烧牛肉怎样做才嫩)</a></li>
-                        <li class="py-2"><a href="/html/category/article-8839.htm" title="和女儿一起快乐的说说（米乐）怎么可以错过，">和女儿一起快乐的说说（米乐）怎么可以错过，</a></li>
-                        <li class="py-2"><a href="/html/category/article-9530.htm" title="动物疫苗价格表最新图片及价格（动物疫苗法最新消息2019）">动物疫苗价格表最新图片及价格（动物疫苗法最新消息2019）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9481.htm" title="宠物粮食加工厂设备生产厂家排名榜名单最新（宠物粮食加工厂需要投资多少钱）">宠物粮食加工厂设备生产厂家排名榜名单最新（宠物粮食加工厂需要投资多少钱）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8840.htm" title="动物疫苗去哪买的 动物疫苗去哪买的到">动物疫苗去哪买的 动物疫苗去哪买的到</a></li>
-                        <li class="py-2"><a href="/html/category/article-10103.htm" title="狗狗疫苗可不可以自己打（狗狗疫苗可不可以自己***）">狗狗疫苗可不可以自己打（狗狗疫苗可不可以自己***）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9638.htm" title="河北农大动物医院工资怎么样（河北农业大学动物医学院电话）">河北农大动物医院工资怎么样（河北农业大学动物医学院电话）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8731.htm" title="三国杀全武将语音台词（三国杀全武将语音台词大全）">三国杀全武将语音台词（三国杀全武将语音台词大全）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8732.htm" title="同城免费领养宠物狗（同城领养狗狗）">同城免费领养宠物狗（同城领养狗狗）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10297.htm" title="成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）">成都宠物领养中心领养收费吗现在还收费吗（成都领养宠物吧）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10507.htm" title="动物疫苗新规定有哪些种类图片 动物疫苗新规定有哪些种类图片大全">动物疫苗新规定有哪些种类图片 动物疫苗新规定有哪些种类图片大全</a></li>
+                        <li class="py-2"><a href="/html/category/article-10716.htm" title="湛江旅游十佳景点(湛江十大旅游景点介绍)">湛江旅游十佳景点(湛江十大旅游景点介绍)</a></li>
+                        <li class="py-2"><a href="/html/category/article-9427.htm" title="动物疫苗种类及类型图片及价格表（动物疫苗种类及类型图片及价格表大全）">动物疫苗种类及类型图片及价格表（动物疫苗种类及类型图片及价格表大全）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9997.htm" title="动物医院资质查询官网入口查询（动物医院诊疗管理系统）">动物医院资质查询官网入口查询（动物医院诊疗管理系统）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10052.htm" title="关于阿城宠物寄养的信息">关于阿城宠物寄养的信息</a></li>
+                        <li class="py-2"><a href="/html/category/article-9689.htm" title="南京农业大学动物医学教授（南京农业大学动物医学教授名单）">南京农业大学动物医学教授（南京农业大学动物医学教授名单）</a></li>
                         <li class="py-2"><a href="/html/category/article-9998.htm" title="卖动物疫苗需要什么资质 卖动物疫苗需要什么资质证书">卖动物疫苗需要什么资质 卖动物疫苗需要什么资质证书</a></li>
+                        <li class="py-2"><a href="/html/category/article-10557.htm" title="动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格">动物防疫疫苗数量统计表 动物防疫疫苗数量统计表格</a></li>
+                        <li class="py-2"><a href="/html/category/article-9583.htm" title="2021年河南动物疫苗中标公告公布了吗（2021年河南动物疫苗中标公告公布了吗知乎）">2021年河南动物疫苗中标公告公布了吗（2021年河南动物疫苗中标公告公布了吗知乎）</a></li>
                     </ul>
     </div>
 </div>
@@ -214,7 +214,8 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">48</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">10</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">58</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">24</span></li>
